# playground

./: .gitignore  README.md
.devcontainer/url-shortener/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml  post-install.sh  post-start.sh
.github/: act.json.txt  api-cd.yml  api-ci.yml
.github/workflows/: api-cd.yml  api-ci-on-pr.yml  api-ci-on-push.yml  api-ci.yml
.pipeline/: cd-pipeline.yml  ci-pipeline.yml
applications/HelloWorldApp/: Dockerfile  HelloWorldController.cs  docker-build-push.sh  docker-compose.yaml
applications/url-shortener/: .dockerignore  .env.dev  Dockerfile  README.md  docker-build-push.sh  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
applications/url-shortener/tests/: test_api.py
applications/url-shortener/url_shortener/: config.py  main.py
applications/url-shortener/url_shortener/database/: database.py  models.py  schemas.py
applications/url-shortener/url_shortener/endpoints/: url.py
applications/url-shortener/url_shortener/services/: url.py
applications/url-shortener/url_shortener/templates/: result.html
applications/url-shortener/url_shortener/tests/: conftest.py  test_api.py
argocd/: argo.tf  main.tf
argocd-apps/: README.md
argocd-apps/postgresql/: Chart.yaml  values.yaml
argocd-apps/root-app/: values.yaml
global-vars/: terraform.tfvars
gpt-fun/: README.md
local-kind-cluster/: README.md  delete-cluster.bat  terraform_cluster_services.sh
metrics/: README.md  prometheus.tf  providers.tf
metrics-docker/: README.md  docker-compose.yaml  queries.yml
playground-azure/: README.md
playground-k8s/: README.md
url-shortener/: .dockerignore  Dockerfile  README.md  docker-build-push.sh  docker-compose.yml  pyproject.toml
url-shortener/url_shortener/: config.py  main.py
url-shortener/url_shortener/database/: database.py  schemas.py
url-shortener/url_shortener/endpoints/: __init__.py  generator.py  health.py  url.py
url-shortener/url_shortener/services/: generator.py  url.py
url-shortener/url_shortener/templates/: form.html
(+85 files in other folders)
