[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["kayleevo9x <kayleevo9x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
fastapi = "0.112.1"
pyshorteners = "1.0.1"
sqlalchemy = "2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
