[tool.poetry]
name = "url-shortener"
version = "1.2.0"
description = "API to create short URL similar to bit.ly"
authors = ["kayleevo9x <kayleevo9x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
fastapi = "0.112.1"
pyshorteners = "1.0.1"
sqlalchemy = "2.0.32"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
prometheus-client = "0.20.0"
psycopg2-binary = "2.9.9"
jinja2 = "3.1.4"
python-multipart = "0.0.9"
prometheus-fastapi-instrumentator = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
