[tool.poetry]
name = "url-shortener"
version = "1.2.0"
description = "API to create short URL similar to bit.ly"
authors = ["kayleevo9x <kayleevo9x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
fastapi = "0.112.1"
pyshorteners = "1.0.1"
sqlalchemy = "2.0.32"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
prometheus-client = "0.20.0"
psycopg2-binary = "2.9.9"
jinja2 = "3.1.4"
python-multipart = "0.0.9"
prometheus-fastapi-instrumentator = "7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-cov = "^6.0.0"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["url_shortener", "tests"]
junit_family = "xunit2"
junit_suite_name = "url_shortener"